Fix for JDK-6546236 made Solaris os::yield() a no-op

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • 9
    • b24
    • solaris
    • Not verified

        Fix for JDK-6546236 merged the Solaris os::sleep() implementation with the shared POSIX implementation. However, Solaris code used to call os:sleep(Thread::current(), 0, false) to implement os::yield(), and the os::posix::sleep() method returns immediately if its time argument is zero, which makes the Solaris os::yield() method a no-op.

         

              Assignee:
              Frederic Parain
              Reporter:
              Frederic Parain
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: